sidebar functional based on roles and is only visible if a user is logged in.  login remember me functionality bug fixed as well.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,14 +7,18 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    background-color: #eff6ffee;
   }
   
   app-header {
     width: 100%;
   }
   
-  router-outlet {
+  /* router-outlet {
     flex-grow: 1;
     padding: 20px;
+  } */
+
+  app-sidebar {
+    z-index: 2;
   }
-  
