--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,7 +3,7 @@
     justify-content: space-around;
     align-items: center;
     padding: 10px 20px;
-    background-color: #f8f9fa; /* Adjust as needed */
+    background-color: #FAFAFA; /* Adjust as needed */
     box-shadow: 0px 3px 13.3px 9px rgba(231, 225, 238, 0.53);
   }
   
